[tool.poetry]
name = "cipher_rs4106"
version = "1.0"
description = "A timeless classic cipher that encrypts and decrypts strings containing letters from the alphabet."
authors = ["Remy Spanierman"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
