[tool.poetry]
name = "cipher_rs4106"
version = "1.0"
description = "A timeless classic cipher that encrypts and decrypts strings containing letters from the alphabet."
authors = ["Remy Spanierman"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
myst-nb = "^0.13.1"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
